--- a/CatCommander/MainWindow.axaml
+++ b/CatCommander/MainWindow.axaml
@@ -2,8 +2,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:as="http://schemas.actiprosoftware.com/avaloniaui"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d"
+        d:DesignWidth="800" d:DesignHeight="450"
+        MinWidth="500" MinHeight="400"
+        WindowState="Maximized"
         x:Class="CatCommander.MainWindow"
         Title="CatCommander">
     <DockPanel LastChildFill="True">
@@ -63,9 +65,9 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" MinWidth="100" />
                 <ColumnDefinition Width="40" />
-                <ColumnDefinition Width="*" MinWidth="100"/>
+                <ColumnDefinition Width="*" MinWidth="100" />
             </Grid.ColumnDefinitions>
-            
+
             <!-- Left Pane -->
             <TabControl Grid.Column="0" Margin="0" Padding="0">
                 <TabItem Header="C:" Margin="0" Padding="0">
@@ -104,17 +106,26 @@
                           Width="4"
                           ResizeDirection="Columns"
                           ResizeBehavior="PreviousAndNext" />
-            <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Width="32">
-                <Button Margin="0" Padding="0" Width="32"> <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia"/> </Button>
-                <Button Margin="0" Padding="0" Width="32"> <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia"/> </Button>
-                <Button Margin="0" Padding="0" Width="32"> <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia"/> </Button>
-                <Button Margin="0" Padding="0" Width="32"> <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia"/> </Button>
+            <StackPanel Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center" Width="32">
+                <Border Height="100" />
+                <Button Margin="0" Padding="0" Width="32">
+                    <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia" />
+                </Button>
+                <Button Margin="0" Padding="0" Width="32">
+                    <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia" />
+                </Button>
+                <Button Margin="0" Padding="0" Width="32">
+                    <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia" />
+                </Button>
+                <Button Margin="0" Padding="0" Width="32">
+                    <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia" />
+                </Button>
             </StackPanel>
             <GridSplitter Grid.Column="1"
                           HorizontalAlignment="Right"
                           Width="4"
                           ResizeDirection="Columns"
-                          ResizeBehavior="PreviousAndNext"/>
+                          ResizeBehavior="PreviousAndNext" />
 
             <!-- Right Pane -->
             <TabControl Grid.Column="2" Margin="0" Padding="0">
