--- a/CatCommander/MainWindow.axaml
+++ b/CatCommander/MainWindow.axaml
@@ -2,43 +2,48 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="using:CatCommander"
         mc:Ignorable="d"
         d:DesignWidth="800" d:DesignHeight="450"
         MinWidth="500" MinHeight="400"
         WindowState="Maximized"
         x:Class="CatCommander.MainWindow"
         Title="CatCommander">
-    <DockPanel LastChildFill="True">
 
-        <!-- Top menu bar-->
-        <Menu DockPanel.Dock="Top">
-            <MenuItem Header="_File">
-                <MenuItem Header="_New Tab" InputGesture="Ctrl+T" />
-                <MenuItem Header="_Close Tab" InputGesture="Ctrl+W" />
-                <Separator />
-                <MenuItem Header="_Exit" InputGesture="Alt+F4" />
-            </MenuItem>
-            <MenuItem Header="_Edit">
-                <MenuItem Header="_Copy" InputGesture="F5" />
-                <MenuItem Header="_Move" InputGesture="F6" />
-                <MenuItem Header="_Delete" InputGesture="F8" />
-            </MenuItem>
-            <MenuItem Header="_View">
-                <MenuItem Header="_Refresh" InputGesture="Ctrl+R" />
-                <MenuItem Header="_Show Hidden Files" />
-            </MenuItem>
-            <MenuItem Header="_Help">
-                <MenuItem Header="_About" />
-            </MenuItem>
-        </Menu>
+    <!-- Top menu bar-->
+    <NativeMenu.Menu>
+        <NativeMenu>
+            <NativeMenuItem Header="File" IsVisible="true">
+                <NativeMenu>                    
+                    <NativeMenuItem Header="Open…"  Gesture="Meta+O" />
+                    <NativeMenuItem Header="Save As…"  Gesture="Meta+Shift+S" />
+                    <NativeMenuItem Header="Save As…"  Gesture="Meta+A" />
+                </NativeMenu>
+            </NativeMenuItem>
+            <NativeMenuItem Header="Edit" IsEnabled="true">
+                <NativeMenu>
+                    <NativeMenuItem Header="Cut"  Gesture="Meta+X" />
+                    <NativeMenuItem Header="Copy"  Gesture="Meta+C" />
+                    <NativeMenuItem Header="Past"  Gesture="Meta+V" />
+                </NativeMenu>
+            </NativeMenuItem>
+        </NativeMenu>
+    </NativeMenu.Menu>
+
+    <DockPanel LastChildFill="True">
+        <NativeMenuBar DockPanel.Dock="Top" x:Name="MenuBar" />
 
         <!-- Toolbar -->
         <Border DockPanel.Dock="Top" Background="{DynamicResource SystemControlBackgroundChromeMediumLowBrush}"
                 BorderBrush="{DynamicResource SystemControlForegroundBaseMediumLowBrush}"
                 BorderThickness="0,0,0,1" Padding="5">
-            <StackPanel Orientation="Horizontal" Spacing="5">
-                <Button Content="Back" ToolTip.Tip="Go Back (Alt+Left)" Padding="8,4" />
-                <Button Content="Forward" ToolTip.Tip="Go Forward (Alt+Right)" Padding="8,4" />
+            <StackPanel Orientation="Horizontal">
+                <Button>
+                    <Image Source="/Images/close_32x32.png" Width="32" />
+                </Button>
+                <Button>
+                    <Image Source="/Images/selectall_32x32.png" Width="32" />
+                </Button>
                 <Separator Width="1" Height="20" Margin="5,0" />
                 <Button Content="Up" ToolTip.Tip="Parent Directory (Backspace)" Padding="8,4" />
                 <Button Content="Refresh" ToolTip.Tip="Refresh (Ctrl+R)" Padding="8,4" />
@@ -51,15 +56,6 @@
             </StackPanel>
         </Border>
 
-        <!-- status bar -->
-        <Border DockPanel.Dock="Bottom" Margin="5">
-            <Grid ColumnDefinitions="Auto,*,Auto,Auto">
-                <TextBlock Grid.Column="0" Text="Ready" Margin="0,0,10,0" />
-                <TextBlock Grid.Column="2" Text="Selected: 0 files" Margin="0,0,10,0" />
-                <TextBlock Grid.Column="3" Text="Total: 10 items" />
-            </Grid>
-        </Border>
-
         <!-- main panes -->
         <Grid Margin="4">
             <Grid.ColumnDefinitions>
@@ -69,34 +65,9 @@
             </Grid.ColumnDefinitions>
 
             <!-- Left Pane -->
-            <TabControl Grid.Column="0" Margin="0" Padding="0">
-                <TabItem Header="C:" Margin="0" Padding="0">
-                    <Border BorderThickness="1" BorderBrush="Gray">
-                        <StackPanel>
-                            <TextBlock FontWeight="Bold" Margin="5">Left Pane</TextBlock>
-                            <ListBox>
-                                <ListBoxItem>.. (Parent Directory)</ListBoxItem>
-                                <ListBoxItem>Folder 1</ListBoxItem>
-                                <ListBoxItem>Folder 2</ListBoxItem>
-                                <ListBoxItem>File 1.txt</ListBoxItem>
-                                <ListBoxItem>File 2.txt</ListBoxItem>
-                            </ListBox>
-                        </StackPanel>
-                    </Border>
-                </TabItem>
-                <TabItem Header="C:\windows">
-                    <Border BorderThickness="1" BorderBrush="Gray">
-                        <StackPanel>
-                            <TextBlock FontWeight="Bold" Margin="5">Left Pane</TextBlock>
-                            <ListBox>
-                                <ListBoxItem>.. (Parent Directory)</ListBoxItem>
-                                <ListBoxItem>Folder 1</ListBoxItem>
-                                <ListBoxItem>Folder 2</ListBoxItem>
-                                <ListBoxItem>File 1.txt</ListBoxItem>
-                                <ListBoxItem>File 2.txt</ListBoxItem>
-                            </ListBox>
-                        </StackPanel>
-                    </Border>
+            <TabControl Grid.Column="0">
+                <TabItem Header="Home">
+                    <local:ItemsBrowser />
                 </TabItem>
             </TabControl>
 
@@ -109,16 +80,16 @@
             <StackPanel Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center" Width="32">
                 <Border Height="100" />
                 <Button Margin="0" Padding="0" Width="32">
-                    <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia" />
+                    <Image Source="/Images/invert_32x32.png" />
                 </Button>
                 <Button Margin="0" Padding="0" Width="32">
-                    <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia" />
+                    <Image Source="/Images/download_32x32.png" />
                 </Button>
                 <Button Margin="0" Padding="0" Width="32">
-                    <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia" />
+                    <Image Source="/Images/left_32x32.png" />
                 </Button>
                 <Button Margin="0" Padding="0" Width="32">
-                    <Image Source="resm:Avalonia.Skia.Assets.NoiseAsset_256X256_PNG.png?assembly=Avalonia.Skia" />
+                    <Image Source="/Images/right_32x32.png" />
                 </Button>
             </StackPanel>
             <GridSplitter Grid.Column="1"
@@ -128,34 +99,12 @@
                           ResizeBehavior="PreviousAndNext" />
 
             <!-- Right Pane -->
-            <TabControl Grid.Column="2" Margin="0" Padding="0">
-                <TabItem Header="C:" Margin="0" Padding="0">
-                    <Border BorderThickness="1" BorderBrush="Gray">
-                        <StackPanel>
-                            <TextBlock FontWeight="Bold" Margin="5">Left Pane</TextBlock>
-                            <ListBox>
-                                <ListBoxItem>.. (Parent Directory)</ListBoxItem>
-                                <ListBoxItem>Folder 1</ListBoxItem>
-                                <ListBoxItem>Folder 2</ListBoxItem>
-                                <ListBoxItem>File 1.txt</ListBoxItem>
-                                <ListBoxItem>File 2.txt</ListBoxItem>
-                            </ListBox>
-                        </StackPanel>
-                    </Border>
+            <TabControl Grid.Column="2">
+                <TabItem Header="Home">
+                    <local:ItemsBrowser />
                 </TabItem>
-                <TabItem Header="C:\windows" Margin="0" Padding="0">
-                    <Border BorderThickness="1" BorderBrush="Gray">
-                        <StackPanel>
-                            <TextBlock FontWeight="Bold" Margin="5">Left Pane</TextBlock>
-                            <ListBox>
-                                <ListBoxItem>.. (Parent Directory)</ListBoxItem>
-                                <ListBoxItem>Folder 1</ListBoxItem>
-                                <ListBoxItem>Folder 2</ListBoxItem>
-                                <ListBoxItem>File 1.txt</ListBoxItem>
-                                <ListBoxItem>File 2.txt</ListBoxItem>
-                            </ListBox>
-                        </StackPanel>
-                    </Border>
+                <TabItem Header="src">
+                    <local:ItemsBrowser />
                 </TabItem>
             </TabControl>
 
