--- a/CatCommander/App.axaml
+++ b/CatCommander/App.axaml
@@ -1,15 +1,20 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="CatCommander.App"
+             Name="CatCommander"
              RequestedThemeVariant="Default">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
     <NativeMenu.Menu>
-        <NativeMenu>
-            <NativeMenuItem Header="About CatCommander" />
-            <NativeMenuItem Header="Settings..." />
-        </NativeMenu>
+        <OnPlatform>
+            <OnPlatform.macOS>
+                <NativeMenu>
+                    <NativeMenuItem Header="About CatCommander" />
+                    <NativeMenuItem Header="Settings..." />
+                </NativeMenu>
+            </OnPlatform.macOS>
+        </OnPlatform>
     </NativeMenu.Menu>
-    
+
     <Application.Styles>
         <FluentTheme />
         <StyleInclude Source="avares://Avalonia.Controls.TreeDataGrid/Themes/Fluent.axaml" />
