--- a/CatCommander/App.axaml
+++ b/CatCommander/App.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="CatCommander.App"
              Name="CatCommander"
-             RequestedThemeVariant="Default">
+             RequestedThemeVariant="Light">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
     <NativeMenu.Menu>
         <OnPlatform>
