--- a/CatCommander/UI/ItemsBrowser.axaml
+++ b/CatCommander/UI/ItemsBrowser.axaml
@@ -5,7 +5,7 @@
              xmlns:vm="using:CatCommander.ViewModels"
              mc:Ignorable="d"
              d:DesignWidth="800" d:DesignHeight="600"
-             x:Class="CatCommander.ItemsBrowser"
+             x:Class="CatCommander.UI.ItemsBrowser"
              x:DataType="vm:ItemsBrowserViewModel">
     <DockPanel>
         <!-- Path dropdown/editor at the top -->
